# BenTT

./: BenTT.cabal  LICENSE  README.md  stack.yaml
.devcontainer/: Dockerfile  devcontainer.json
src/: Main.hs
src/BenTT/: DeBruijn.hs  Equiv.hs  Eval.hs  PPrint.hs  Paths.hs  Syntax.hs  TypeCheck.hs  Types.hs
