name:                BenTT
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/BenTT#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2022 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable BenTT
    hs-source-dirs:      src
    main-is:             Main.hs
    default-language:    Haskell2010
    other-modules:
        BenTT.DeBruijn,
        BenTT.Syntax,
        BenTT.Equiv,
        BenTT.PPrint,
        BenTT.TypeCheck
    build-depends:
        base >= 4.15 && < 5,
        bound,
        mtl,
        transformers-compat,
        optics,
        generic-optics

